[버그 수정중]